# SimpleImgDescriptor

./: README.md  app.py  pyproject.toml
